--- a/persistencia/pom.xml
+++ b/persistencia/pom.xml
@@ -24,5 +24,10 @@
   		<artifactId>hibernate-entitymanager</artifactId>
   		<version>5.2.10.Final</version>
   	</dependency>
+  	<dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>javax.servlet-api</artifactId>
+    	<version>4.0.0-b05</version>
+	</dependency>
   </dependencies>
 </project>
